Added a config option to disable the registration endpoint

--- a/conf.yaml
+++ b/conf.yaml
@@ -9,3 +9,6 @@ serverAddr: ""
 
 #The server port to use. By default, port 8000 is used.
 serverPort: 8000
+
+# Disable the registration endpoint
+disableRegistration: false
